# CVEMaps

./: .gitattributes  .gitignore  ALTERNATIVE_GRAPHS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.md  README.md  VISUALIZATION_SUMMARY.md  build_compact_graphs.py  build_graph.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: update_map.yml
cvemaps/: __init__.py  build_graph.py
scripts/: README.md  build_all.py  build_alternative_graphs.py  build_analytical_graphs.py  build_extended_graphs.py  build_graph.py  config.py  optimize_data.py  setup_cve_data.sh
web/: attack-surface-timeline.html  bipartite-top50.html  clusters.html  cna-collaboration.html  cvss-severity.html  cwe-circular.html  cwe-cooccurrence.html  cwe-cvss-distribution.html  cwe-hierarchy.html  cwe-stars.html  cwe-trending.html  force-directed.html  heatmap-matrix.html  index-bipartite-top50.html  index-cna-collaboration.html  index-cwe-cooccurrence.html  index-cwe-hierarchy.html  index-cwe-stars.html  index.html  mitre-ego.html  sankey-flow.html  temporal-trends.html  vendor-profiles.html
web/data/: cna_collaboration.json  cna_to_cwe_map.json  cna_vendor_map.json  cve_references_map.json  cve_temporal_map.json  cvss_severity_distribution.json  cwe_circular_layout.json  cwe_cooccurrence_map.json  cwe_cvss_distribution.json  cwe_hierarchy_tree.json  cwe_star_graphs.json  cwe_trending.json  heatmap_matrix.json  last_updated.txt  mitre_ego_network.json  sankey_flow.json  temporal_trends.json  top_cna_cwe_bipartite.json  vendor_cwe_map.json  vendor_vulnerability_profiles.json
